plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'nu.studer.jooq' version '9.0'
    id 'checkstyle'
    id 'jacoco'
}

group = 'com.opsclear'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

sourceSets {
    main {
        java {
            srcDir 'src/main/generated'
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // API Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // jOOQ code generation classpath
    jooqGenerator 'org.postgresql:postgresql'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jooq {
    version = dependencyManagement.importedProperties['jooq.version']
    configurations {
        main {
            // Only regenerate when explicitly running ./gradlew generateMainJooqSchemaSource
            generateSchemaSourceOnCompilation = false
            generationTool {
                jdbc {
                    driver = 'org.postgresql.Driver'
                    url = 'jdbc:postgresql://localhost:5432/opsclear'
                    user = 'opsclear'
                    password = 'opsclear'
                }
                generator {
                    name = 'org.jooq.codegen.DefaultGenerator'
                    database {
                        name = 'org.jooq.meta.postgres.PostgresDatabase'
                        inputSchema = 'public'
                        excludes = 'flyway_schema_history'
                    }
                    generate {
                        daos = false
                        records = true
                        pojos = false
                        fluentSetters = true
                        javaTimeTypes = true
                    }
                    target {
                        packageName = 'com.opsclear.generated.jooq'
                        directory = 'src/main/generated'
                    }
                }
            }
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()

    // Filter tests based on project properties
    if (project.hasProperty('excludeIntegrationTests')) {
        exclude '**/integration/**'
    }
    if (project.hasProperty('onlyIntegrationTests')) {
        include '**/integration/**'
    }

    testLogging {
        events 'passed', 'skipped', 'failed'
        showExceptions = true
        showCauses = true
        showStackTraces = true
        exceptionFormat = 'full'
    }

    finalizedBy jacocoTestReport
}

// JaCoCo configuration
jacoco {
    toolVersion = '0.8.12'
}

def jacocoExclusions = [
    '**/generated/**',
    '**/config/**',
    '**/*Application*'
]

tasks.named('jacocoTestReport') {
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(
        sourceSets.main.output.asFileTree.matching {
            exclude jacocoExclusions
        }
    )
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn jacocoTestReport
    classDirectories.setFrom(
        sourceSets.main.output.asFileTree.matching {
            exclude jacocoExclusions
        }
    )
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
    }
}

// Service-layer only report — used by the unit-tests CI job
tasks.register('jacocoServiceTestReport', JacocoReport) {
    dependsOn test
    executionData.setFrom(layout.buildDirectory.file('jacoco/test.exec'))
    sourceDirectories.setFrom(sourceSets.main.allSource.srcDirs)
    classDirectories.setFrom(
        sourceSets.main.output.asFileTree.matching {
            include '**/service/**'
        }
    )
    reports {
        xml.required = true
        html.required = true
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/service/jacocoServiceReport.xml')
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/service/html')
    }
}

tasks.register('jacocoServiceCoverageVerification', JacocoCoverageVerification) {
    dependsOn jacocoServiceTestReport
    executionData.setFrom(layout.buildDirectory.file('jacoco/test.exec'))
    sourceDirectories.setFrom(sourceSets.main.allSource.srcDirs)
    classDirectories.setFrom(
        sourceSets.main.output.asFileTree.matching {
            include '**/service/**'
        }
    )
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
    }
}

// Checkstyle configuration
checkstyle {
    toolVersion = '10.21.4'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    maxWarnings = 0
    maxErrors = 0
}

tasks.withType(Checkstyle).configureEach {
    exclude '**/generated/**'
    reports {
        xml.required = true
        html.required = true
    }
}
